vpc_resources_ec2_terraform/vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"

  tags = {
    Name = "sleety-test-vpc"
  }
}
